<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="themes">Themes</string>
    <string name="aboutApp">About app</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_Fragment_text">Dashboard - Fragment</string>

</resources>