<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"
        />
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_favourites"
        />

    <item
        android:icon="@drawable/ic_profile"
        android:id="@+id/profile"
        android:title="@string/profile" />
    <item
        android:icon="@drawable/ic_about"
        android:id="@+id/aboutApp"
        android:title="@string/aboutApp" />
    <item
        android:icon="@drawable/ic_settings"
        android:id="@+id/settings"
        android:title="@string/settings" />
</group>
</menu>
